--- a/intro_rpkg_lyu.html
+++ b/intro_rpkg_lyu.html
@@ -289,7 +289,7 @@ qgis_run_algorithm(
 
 .pull-right[
 &lt;div class="center-img"&gt;
-&lt;img src="./assets/figures/rd.png" style="margin-top: 120px; height: 50%; width: auto;" /&gt;
+&lt;img src="./assets/figures/rd.png" style="margin-top: 80px; height: 50%; width: auto;" /&gt;
 &lt;/div&gt;
 ]
 
@@ -397,7 +397,7 @@ background-size: contain
 
 .pull-left[
 
-## &lt;a href="https://ausgis.github.io/gdverse/"&gt;&lt;span style="color: #5b7b75;display: block;margin-top: 60px;"&gt;gdverse&lt;/span&gt;&lt;a&gt;
+## &lt;a href="https://ausgis.github.io/gdverse/"&gt;&lt;span style="color: #5b7b75;display: block;margin-top: 60px;"&gt;gdverse&lt;/span&gt;&lt;/a&gt;
 
 #### Geographical Detector Models
 
@@ -464,9 +464,9 @@ background-size: contain
 
 # Thanks
 
-### [Wenbo Lv](https://spatlyu.github.io/)
+### &lt;a href="https://spatlyu.github.io/"&gt;&lt;span style="color: #040707;"&gt;Wenbo Lv&lt;/span&gt;&lt;/a&gt;
 
-### [lyu.geosocial@gmail.com](mailto:lyu.geosocial@gmail.com)
+### &lt;a href="mailto:lyu.geosocial@gmail.com"&gt;&lt;span style="color: #040707;"&gt;lyu.geosocial@gmail.com&lt;/span&gt;&lt;/a&gt;
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
